--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 <div class="video-background">
                   <video id="main-video" preload="auto" autoplay="autoplay" loop="loop" muted="muted" poster="https://dummyimage.com/960x1440/636363/ffffff">
                     <source type="video/mp4" src="video/video.mp4">
-                    <source type="video/webm" src="video/young.mp4">
+                    <source type="video/webm" src="video/young.webm">
                     <source type="video/ogv" src="video/video.ogv">
                   </video>
                 </div>
@@ -399,7 +399,7 @@
               <div class="video-background">
                 <video id="main-video" preload="auto" autoplay="autoplay" loop="loop" muted="muted" poster="https://dummyimage.com/960x1440/636363/ffffff">
                   <source type="video/mp4" src="video/video.mp4">
-                  <source type="video/webm" src="video/young.mp4">
+                  <source type="video/webm" src="video/young.webm">
                   <source type="video/ogv" src="video/video.ogv">
                 </video>
               </div>
@@ -570,7 +570,7 @@
             <div class="video-background">
               <video id="main-video" preload="auto" autoplay="autoplay" loop="loop" muted="muted" poster="https://dummyimage.com/960x1440/636363/ffffff">
                 <source type="video/mp4" src="video/video.mp4">
-                <source type="video/webm" src="video/young.mp4">
+                <source type="video/webm" src="video/young.webm">
                 <source type="video/ogv" src="video/video.ogv">
               </video>
             </div>
@@ -729,7 +729,7 @@
             <div class="video-background">
               <video id="main-video" preload="auto" autoplay="autoplay" loop="loop" muted="muted" poster="https://dummyimage.com/960x1440/636363/ffffff">
                 <source type="video/mp4" src="video/video.mp4">
-                <source type="video/webm" src="video/young.mp4">
+                <source type="video/webm" src="video/young.webm">
                 <source type="video/ogv" src="video/video.ogv">
               </video>
             </div>
@@ -937,7 +937,7 @@
             <div class="video-background">
               <video id="main-video" preload="auto" autoplay="autoplay" loop="loop" muted="muted" poster="https://dummyimage.com/960x1440/636363/ffffff">
                 <source type="video/mp4" src="video/video.mp4">
-                <source type="video/webm" src="video/young.mp4">
+                <source type="video/webm" src="video/young.webm">
                 <source type="video/ogv" src="video/video.ogv">
               </video>
             </div>
