--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 <div class="container-fluid p-0">
                   <div class="row g-0">
                     <div class="col-12">
-                      <p class="copyright">By <a href="http:/www.bootstrapmb.com" target="_blank">Young Labs</a>, 2023</p>
+                      <p class="copyright">By <a href="http:/www.young.app" target="_blank">Young Labs</a>, 2023</p>
                     </div>
                   </div>
                 </div>
