--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
                 <!-- Menu Image Background Start -->
                 <div class="video-background">
-                  <video id="main-video" preload="auto" autoplay="autoplay" loop="loop" muted="muted" >
+                  <video id="main-video"  autoplay="autoplay" loop="loop" muted="muted" >
                     <source type="video/mp4" src="video/video.mp4">
                     <source type="video/webm" src="video/video.webm">
                     <source type="video/ogv" src="video/video.ogv">
@@ -397,7 +397,7 @@
 
               <!-- Background Effect Start -->
               <div class="video-background">
-                <video id="main-video" preload="auto" autoplay="autoplay" loop="loop" muted="muted" >
+                <video id="main-video"  autoplay="autoplay" loop="loop" muted="muted" >
                   <source type="video/mp4" src="video/video.mp4">
                   <source type="video/webm" src="video/video.webm">
                   <source type="video/ogv" src="video/video.ogv">
@@ -610,7 +610,7 @@
 
             <!-- About Section Image Background Start -->
             <div class="video-background">
-              <video id="main-video" preload="auto" autoplay="autoplay" loop="loop" muted="muted" >
+              <video id="main-video"  autoplay="autoplay" loop="loop" muted="muted" >
                 <source type="video/mp4" src="video/video.mp4">
                 <source type="video/webm" src="video/video.webm">
                 <source type="video/ogv" src="video/video.ogv">
@@ -769,7 +769,7 @@
 
             <!-- NFTs Section Image Background Start -->
             <div class="video-background">
-              <video id="main-video" preload="auto" autoplay="autoplay" loop="loop" muted="muted" >
+              <video id="main-video"  autoplay="autoplay" loop="loop" muted="muted" >
                 <source type="video/mp4" src="video/video.mp4">
                 <source type="video/webm" src="video/video.webm">
                 <source type="video/ogv" src="video/video.ogv">
@@ -1053,7 +1053,7 @@
 
             <!-- Contact Section Image Background Start -->
             <div class="video-background">
-              <video id="main-video" preload="auto" autoplay="autoplay" loop="loop" muted="muted" >
+              <video id="main-video"  autoplay="autoplay" loop="loop" muted="muted" >
                 <source type="video/mp4" src="video/video.mp4">
                 <source type="video/webm" src="video/video.webm">
                 <source type="video/ogv" src="video/video.ogv">
