--- a/index.html
+++ b/index.html
@@ -399,8 +399,8 @@
               <div class="video-background">
                 <video id="main-video"  autoplay="autoplay" loop="loop" muted="muted" >
                   <source type="video/mp4" src="video/video.mp4">
-                  <source type="video/webm" src="video/video.webm">
-                  <source type="video/ogv" src="video/video.ogv">
+                  <!-- <source type="video/webm" src="video/video.webm">
+                  <source type="video/ogv" src="video/video.ogv"> -->
                 </video>
               </div>
               <!-- Background Effect End -->
