--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
 
               <!-- Background Effect Start -->
               <div class="video-background">
-                <video id="main-video"  autoplay="autoplay" loop="loop" muted="muted" >
+                <video id="main-video"  autoplay="autoplay" >
                   <source type="video/mp4" src="video/video.mp4">
                   <!-- <source type="video/webm" src="video/video.webm">
                   <source type="video/ogv" src="video/video.ogv"> -->
