--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
                 <!-- Menu Image Background Start -->
                 <div class="video-background">
-                  <video id="main-video"  autoplay="autoplay" loop="loop" muted="muted" >
+                  <video id="main-video" controls preload="auto"  loop="loop">
                     <source type="video/mp4" src="video/video.mp4">
                     <source type="video/webm" src="video/video.webm">
                     <source type="video/ogv" src="video/video.ogv">
@@ -397,10 +397,10 @@
 
               <!-- Background Effect Start -->
               <div class="video-background">
-                <video id="main-video"  autoplay="autoplay" >
+                <video id="main-video" controls preload="auto"  loop="loop">
                   <source type="video/mp4" src="video/video.mp4">
-                  <!-- <source type="video/webm" src="video/video.webm">
-                  <source type="video/ogv" src="video/video.ogv"> -->
+                  <source type="video/webm" src="video/video.webm">
+                  <source type="video/ogv" src="video/video.ogv">
                 </video>
               </div>
               <!-- Background Effect End -->
@@ -610,7 +610,7 @@
 
             <!-- About Section Image Background Start -->
             <div class="video-background">
-              <video id="main-video"  autoplay="autoplay" loop="loop" muted="muted" >
+              <video id="main-video" controls preload="auto"  loop="loop" >
                 <source type="video/mp4" src="video/video.mp4">
                 <source type="video/webm" src="video/video.webm">
                 <source type="video/ogv" src="video/video.ogv">
@@ -769,7 +769,7 @@
 
             <!-- NFTs Section Image Background Start -->
             <div class="video-background">
-              <video id="main-video"  autoplay="autoplay" loop="loop" muted="muted" >
+              <video id="main-video" controls preload="auto"  loop="loop">
                 <source type="video/mp4" src="video/video.mp4">
                 <source type="video/webm" src="video/video.webm">
                 <source type="video/ogv" src="video/video.ogv">
@@ -1053,7 +1053,7 @@
 
             <!-- Contact Section Image Background Start -->
             <div class="video-background">
-              <video id="main-video"  autoplay="autoplay" loop="loop" muted="muted" >
+              <video id="main-video" controls preload="auto"  loop="loop">
                 <source type="video/mp4" src="video/video.mp4">
                 <source type="video/webm" src="video/video.webm">
                 <source type="video/ogv" src="video/video.ogv">
